day03/fakeapi-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fakeapi-ing
  namespace: myns
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: fakeapi
spec:
  ingressClassName: nginx
  rules:
    - host: api-167.172.7.70.nip.io
      http:
        paths:
          - path: /v1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: v1-fakeapi-svc
                port:
                  number: 3000
          - path: /v2(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: v2-fakeapi-svc
                port:
                  number: 3000
